# Clouds-Coder

./: CHANGELOG-2026-03-07.md  CHANGELOG-2026-03-17.md  Clouds_Coder.py  LICENSE  LLM.config.json  README-ja.md  README-zh.md  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  split_coder.py
.github/workflows/: python-publish.yml
Code_Split_Tools/: run_split.py  split_coder.py
Code_Structure/: FRAMEWORK.md  __init__.py  __main__.py  _unclassified.py
Code_Structure/agent/: background.py  bus.py  events.py  tasks.py  todo.py  worktree.py
Code_Structure/app/: context.py
Code_Structure/config/: constants.py  paths.py  settings.py
Code_Structure/llm/: client.py  utils.py
Code_Structure/rag/: index.py  ingestion.py  parsers.py  store.py
Code_Structure/server/: handlers.py
Code_Structure/session/: manager.py  state.py
Code_Structure/skills/: store.py
Code_Structure/utils/: compress.py  crypto.py  errors.py  files.py  http.py  json_utils.py  media.py  misc.py  text.py
Demo_Output/KS Solver/: Makefile  README.md  main.py
Split Tools/: run_split.bat  run_split.command  run_split.sh  split_coder.py
log/: CHANGELOG-2026-03-16.md  CHANGELOG-2026-03-20.md  CHANGELOG-2026-03-25.md  CHANGELOG-2026-03-31.md
packaging/: README.md
packaging/linux/: build_nuitka.sh  build_nuitka_onefile.sh  build_pyinstaller.sh  build_pyinstaller_onefile.sh  run_nuitka.sh  run_nuitka_onefile.sh  run_pyinstaller.sh  run_pyinstaller_onefile.sh
packaging/macos/: build_nuitka.sh  build_nuitka_onefile.sh  build_pyinstaller.sh  (+5 more)
tests/: conftest.py  test_smoke.py
(+19 files in other folders)
